app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 */

@import "bootstrap-sprockets";
@import "bootstrap";
@import url(https://fonts.googleapis.com/css?family=Varela+Round);
@import url(https://fonts.googleapis.com/css?family=Lato:400,900,300italic,300);
@import url(https://fonts.googleapis.com/css?family=Lora);
@import "font-awesome-sprockets";
@import "font-awesome";
/*@import "materialize";*/

*{
	font-family: Lato;
}

a{
	text-decoration: none;
}
.navbar-toggle{
	padding-bottom: 0px;
	height: 0px;
	border: none;
	margin-top: -10px;
	a{
		margin-top: -10px;
		color:black;
	}
}

.navbar-custom{
	box-shadow: 0px 0px 5px 3px #5c5b58;
	background-color: white;
	height: 50px;

	ul.nav.navbar-nav{
		font-family: varela round;

		li a{
			text-decoration: none;
			color: grey;
		}
	}
	.navbar-brand{
 		
		img{
			width: 150px;
		}
		
	}
	.logotext{
		color: #00b32d;
		padding-left: 45px;
		font-size: 25px;
	}
	img{
		margin-top: -5px;
		float:left;
		width: 40px;
	}
}

#green a{
	color: #00b32d;
	font-weight: bold;
	font-size: 20px;
}

body{
	background-color: grey;
}

@media only screen and (max-width: 768px) {
    .navbar-brand {
        float: right;
    }

    #navbar-transparent{
    	display: none;
    }
}

.post{
	
}

.form{
	border: 1px solid #b9b9b9;
	background-color: white;
	padding: 20px;
	border-radius: 5px;
	h1{
		padding-top: none;
		text-align: center;

	}
}

.form-line{
	background-color: grey;
}

.cover{
	margin-left: 0px;
	width: 800px;
}

.post{
	margin-left: 50px;
	width: 800px;
}

.caption{
	text-align: center;
}

.avatar{
	width: 50px;
}

#admin_comment{
	background-color: #e4e4e4;
	padding: 30px;
	border-radius: 10px;
}

.aggregator{
	position: fixed;
	border: 1px solid #b9b9b9;
	height: 84%;
	width: 330px;
}

.dp{
	width: 260px;
}

.pasty{
	img{
		padding-left: none;
		padding-right: none;
		padding-top: 0px;
		max-height: 130px;
		min-height: 130px;
	}
	border: 1px solid #b9b9b9;
	min-height: 400px;
}

.pasty2{
	border: 1px solid #b9b9b9;
	min-height: 400px;
}


.arvo{
	color:black;
	font-family: Lora;
	&:hover{
		text-decoration: none;
		color: black;
	}
}

#footer {
    text-align: center;
    bottom: 0;
    width: 100%;
    height: 60px;
    background-color: #f5f5f5;
    p{
      margin-top: 20px;
      font-family: exo;
    }
}

html,body{
  height: 100%;
}

.wrapper {
    min-height: 100%;
    height: auto !important;
    height: 100%;
    margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */
}

.push {
    height: 100%; /* .push must be the same height as .footer */
}

.footer{
	margin-bottom: 0px;
	border-top:1px solid grey;
	height: 40px;
}

.center{
	text-align: center;
}

#navbar-transparent{
	background: none;
	border: none;
	a,a:visited,a:active{
		color: #FAC800;
		font-family: Lato;
		font-size: 20px;
		font-weight: 300;
	}
}

.push-center{
	margin-left: 30%;
}

#logos{
	padding-top: 50px;
	padding-bottom: 150px;
}

.desc{
	color: white;
	text-align: center;
	font-size: 25px;
	font-weight: 300;
	padding-bottom: 20px;
}

.white{
	color: #FAC800;
}

.btn-empty{
	background: none;
	width: 150px;
	border: 1px solid #FAC800;
	color: #FAC800;
	font-size: 20px;
	font-weight: 300;
	padding: 5px;
	&:hover{
		background-color: #FAC800;
		color: blue;
	}
}

img.upar{
	margin-top: -10px;
}

